--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,15 @@
 {
-  "version": 2,
-  "builds": [
+"version": 2,
+"builds": [
     {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
+    "src": "src/index.ts",
+    "use": "@vercel/node"
     }
-  ],
-  "routes": [
+],
+"routes": [
     {
-      "src": "/api/.*",
-      "dest": "api/index.ts"
-    },
-    {
-      "src": "/.*",
-      "dest": "api/index.ts"
+"src": "/.*",
+"dest": "src/index.ts"
     }
-  ]
+]
 }
