--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
   "compilerOptions": {
-    /* File Layout */
-    "rootDir": "./src",
+    "target": "ES2022",
+    "module": "Node16",
+    "moduleResolution": "node16",
     "outDir": "./dist",
-
-    /* Module and Environment Settings */
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "ES2020",
-    "lib": ["es2020"],
-    "types": ["node"],
-    
-    /* Type Checking and Quality */
+    "rootDir": "./", 
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    
+    // ESTO ES LO IMPORTANTE:
+    "types": ["node", "jest"]
   },
-  "include": ["src/**/*"]
+  // Aseguramos que TS lea tanto el código fuente como los tests
+  "include": ["src/**/*", "test/**/*", "tests/**/*"],
+  "exclude": ["node_modules"]
 }
